--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "concurrently": "^8.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -19,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "both": "concurrently\"npm run start\"\"nodemon Backend/index.js\""
+    "both": "concurrently \"npm run start\" \"nodemon Backend/index.js\""
   },
   "eslintConfig": {
     "extends": [
