--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,1 @@
-JWT_SECRET=  thisisthemostsecureserver
-
-MONGOURL = mongodb+srv://srinidhips101:Hoonigan123!@cluster0.w7y7gj6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://Srinidhi101:Srinidhi2000@cluster0.e0fgve6.mongodb.net/
